--- a/programs/5.1-functional.ipynb
+++ b/programs/5.1-functional.ipynb
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "smodel.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
+    "smodel.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "smodel.fit(X, Y, epochs=10, batch_size=128)\n",
     "score = smodel.evaluate(X, Y)\n",
     "score"
@@ -111,7 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fmodel.compile(optimizer='rmsprop', loss='categorical_crossentropy')\n",
+    "fmodel.compile(optimizer='rmsprop', loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "fmodel.fit(X, Y, epochs=10, batch_size=128)\n",
     "score = fmodel.evaluate(X, Y)\n",
     "score"
@@ -151,9 +151,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
