--- a/programs/5.5-multioutput.ipynb
+++ b/programs/5.5-multioutput.ipynb
@@ -26,9 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model\n",
     "from keras import layers\n",
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'form': '-DOCSTART-', 'ppos': '-X-', 'pchunk': 'O', 'ner': 'O'}]\n",
+      "[{'form': 'EU', 'ppos': 'NNP', 'pchunk': 'I-NP', 'ner': 'I-ORG'}, {'form': 'rejects', 'ppos': 'VBZ', 'pchunk': 'I-VP', 'ner': 'O'}, {'form': 'German', 'ppos': 'JJ', 'pchunk': 'I-NP', 'ner': 'I-MISC'}, {'form': 'call', 'ppos': 'NN', 'pchunk': 'I-NP', 'ner': 'O'}, {'form': 'to', 'ppos': 'TO', 'pchunk': 'I-VP', 'ner': 'O'}, {'form': 'boycott', 'ppos': 'VB', 'pchunk': 'I-VP', 'ner': 'O'}, {'form': 'British', 'ppos': 'JJ', 'pchunk': 'I-NP', 'ner': 'I-MISC'}, {'form': 'lamb', 'ppos': 'NN', 'pchunk': 'I-NP', 'ner': 'O'}, {'form': '.', 'ppos': '.', 'pchunk': 'O', 'ner': 'O'}]\n"
+     ]
+    }
+   ],
    "source": [
     "train_sentences, dev_sentences, test_sentences, column_names = load_conll2003_en()\n",
     "\n",
@@ -141,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,9 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First sentence, words ['eu', 'rejects', 'german', 'call', 'to', 'boycott', 'british', 'lamb', '.']\n",
+      "First sentence, NER ['I-ORG', 'O', 'I-MISC', 'O', 'O', 'O', 'I-MISC', 'O', 'O']\n"
+     ]
+    }
+   ],
    "source": [
     "X_words, Y_ner = build_sequences(train_dict, key_x='form', key_y='ner')\n",
     "print('First sentence, words', X_words[1])\n",
@@ -192,9 +218,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First sentence, words ['nnp', 'vbz', 'jj', 'nn', 'to', 'vb', 'jj', 'nn', '.']\n",
+      "First sentence, POS ['I-ORG', 'O', 'I-MISC', 'O', 'O', 'O', 'I-MISC', 'O', 'O']\n"
+     ]
+    }
+   ],
    "source": [
     "Y_pos, Y_ner = build_sequences(train_dict, key_x='ppos', key_y='ner')\n",
     "print('First sentence, words', Y_pos[1])\n",
@@ -203,9 +238,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input: ['eu', 'rejects', 'german', 'call', 'to', 'boycott', 'british', 'lamb', '.']\n",
+      "output 1: ['nnp', 'vbz', 'jj', 'nn', 'to', 'vb', 'jj', 'nn', '.']\n",
+      "output 2: ['I-ORG', 'O', 'I-MISC', 'O', 'O', 'O', 'I-MISC', 'O', 'O']\n"
+     ]
+    }
+   ],
    "source": [
     "print('input:', X_words[1])\n",
     "print('output 1:', Y_pos[1])\n",
@@ -221,9 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21010\n",
+      "46\n",
+      "['\"', '$', \"''\", '(', ')', ',', '-x-', '.', ':', 'cc', 'cd', 'dt', 'ex', 'fw', 'in', 'jj', 'jjr', 'jjs', 'ls', 'md', 'nn', 'nnp', 'nnps', 'nns', 'nn|sym', 'pdt', 'pos', 'prp', 'prp$', 'rb', 'rbr', 'rbs', 'rp', 'sym', 'to', 'uh', 'vb', 'vbd', 'vbg', 'vbn', 'vbp', 'vbz', 'wdt', 'wp', 'wp$', 'wrb']\n",
+      "8\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['B-LOC', 'B-MISC', 'B-ORG', 'I-LOC', 'I-MISC', 'I-ORG', 'I-PER', 'O']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "word_set = sorted(list(set([item for sublist in X_words for item in sublist])))\n",
     "pos_set = sorted(list(set([item for sublist in Y_pos for item in sublist])))\n",
@@ -244,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rev_word_idx = dict(enumerate(word_set, start=2))\n",
-    "rev_pos_idx = dict(enumerate(pos_set, start=2))\n",
-    "rev_ner_idx = dict(enumerate(ner_set, start=2))\n",
-    "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
-    "pos_idx = {v: k for k, v in rev_pos_idx.items()}\n",
-    "ner_idx = {v: k for k, v in rev_ner_idx.items()}"
+    "idx_word = dict(enumerate(word_set, start=2))\n",
+    "idx_pos = dict(enumerate(pos_set, start=2))\n",
+    "idx_ner = dict(enumerate(ner_set, start=2))\n",
+    "word_idx = {v: k for k, v in idx_word.items()}\n",
+    "pos_idx = {v: k for k, v in idx_pos.items()}\n",
+    "ner_idx = {v: k for k, v in idx_ner.items()}"
    ]
   },
   {
@@ -273,9 +339,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['eu', 'rejects', 'german', 'call', 'to', 'boycott', 'british', 'lamb', '.']\n",
+      "['nnp', 'vbz', 'jj', 'nn', 'to', 'vb', 'jj', 'nn', '.']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['I-ORG', 'O', 'I-MISC', 'O', 'O', 'O', 'I-MISC', 'O', 'O']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(X_words[1])\n",
     "print(Y_pos[1])\n",
@@ -284,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,9 +387,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8780, 16385, 9880, 5996, 19360, 5682, 5783, 12212, 125]\n",
+      "[23, 43, 17, 22, 36, 38, 17, 22, 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[7, 9, 6, 9, 9, 9, 6, 9, 9]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(X_words_idx[1])\n",
     "print(Y_pos_idx[1])\n",
@@ -320,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,9 +435,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[    0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0     0     0     0     0\n",
+      "     0     0     0     0     0     0     0     0  8780 16385  9880  5996\n",
+      " 19360  5682  5783 12212   125]\n",
+      "[ 0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0  0\n",
+      "  0  0  0  0  0  0  0  0 23 43 17 22 36 38 17 22  9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "       0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 9, 6, 9, 9, 9,\n",
+       "       6, 9, 9], dtype=int32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(X_words_idx[1])\n",
     "print(Y_pos_idx[1])\n",
@@ -349,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,21 +593,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/pierre/anaconda3/lib/python3.7/site-packages/tensorflow_core/python/framework/indexed_slices.py:424: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
+      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "14987/14987 [==============================] - 11s 758us/step - loss: 0.5056 - pos_loss: 0.3915 - ner_loss: 0.1136 - pos_acc: 0.1401 - ner_acc: 0.8275\n",
+      "Epoch 2/5\n",
+      "14987/14987 [==============================] - 11s 729us/step - loss: 0.3938 - pos_loss: 0.3262 - ner_loss: 0.0672 - pos_acc: 0.2851 - ner_acc: 0.8338\n",
+      "Epoch 3/5\n",
+      "14987/14987 [==============================] - 11s 757us/step - loss: 0.2977 - pos_loss: 0.2471 - ner_loss: 0.0502 - pos_acc: 0.4769 - ner_acc: 0.8484\n",
+      "Epoch 4/5\n",
+      "14987/14987 [==============================] - 12s 780us/step - loss: 0.2057 - pos_loss: 0.1661 - ner_loss: 0.0397 - pos_acc: 0.6989 - ner_acc: 0.8928\n",
+      "Epoch 5/5\n",
+      "14987/14987 [==============================] - 12s 783us/step - loss: 0.1374 - pos_loss: 0.1058 - ner_loss: 0.0313 - pos_acc: 0.8186 - ner_acc: 0.9243\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x7fcc4a2b3e90>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(X_words_idx, \n",
     "          {'pos':Y_pos_idx_cat, 'ner':Y_ner_idx_cat},\n",
     "          epochs=5, batch_size=128)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -492,9 +661,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
