--- a/programs/5.7-generation.ipynb
+++ b/programs/5.7-generation.ipynb
@@ -182,7 +182,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Given a bigram, $w_n, w_{n+1}$, we compute $P(w_{n+1}|w_n)$. This is defined as $\\frac{count(w_n, w_{n+1})}{count(w_n)}$."
+    "## Conditional Probabilities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a bigram, $w_n, w_{n+1}$, we compute $P(w_{n+1}|w_n)$. This is defined as $\\frac{count(w_n, w_{n+1})}{count(w_n)}$."
    ]
   },
   {
@@ -192,36 +199,6 @@
    "outputs": [],
    "source": [
     "probs = {k: v/unigrams[k[0]] for k, v in bigrams.items()}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cond_prob = sorted([(k, v) for k, v in probs.items() if k[0] == 'master'],\n",
-    "                    key=lambda tup: tup[1], reverse=True)\n",
-    "cond_prob"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Drawing samples from a multinomial distribution. Understanding the `np.random.multinomial` function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "np.random.seed(0)\n",
-    "for i in range(20):\n",
-    "    print(np.random.multinomial(1, [0.3, 0.5, 0.2]))"
    ]
   },
   {
@@ -242,6 +219,51 @@
     "                    key=lambda tup: tup[1], reverse=True)\n",
     "    return cprob\n",
     "cond_prob('master')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Drawing samples from a multinomial distribution. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Understanding the `np.random.multinomial` function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.random.seed(0)\n",
+    "for i in range(10):\n",
+    "    print(np.random.multinomial(1, [0.3, 0.5, 0.2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On a large number of draws"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draws = []\n",
+    "for i in range(100000):\n",
+    "    draws.append(np.random.multinomial(1, [0.3, 0.5, 0.2]))\n",
+    "np.sum(draws, axis=0)"
    ]
   },
   {
@@ -291,9 +313,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
