--- a/programs/5.2-monoinput.ipynb
+++ b/programs/5.2-monoinput.ipynb
@@ -216,10 +216,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rev_word_idx = dict(enumerate(word_set, start=2))\n",
-    "rev_ner_idx = dict(enumerate(ner_set, start=2))\n",
-    "word_idx = {v: k for k, v in rev_word_idx.items()}\n",
-    "ner_idx = {v: k for k, v in rev_ner_idx.items()}"
+    "idx_word = dict(enumerate(word_set, start=2))\n",
+    "idx_ner = dict(enumerate(ner_set, start=2))\n",
+    "word_idx = {v: k for k, v in idx_word.items()}\n",
+    "ner_idx = {v: k for k, v in idx_ner.items()}"
    ]
   },
   {
@@ -409,9 +409,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
