--- a/programs/5.6-tensorboard-salammbo classification.ipynb
+++ b/programs/5.6-tensorboard-salammbo classification.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,9 +69,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 1 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,9 +159,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'s': 1, 'a': 2, 'l': 1, 'm': 2, 'b': 1, 'ô': 1},\n",
+       " {'b': 2,\n",
+       "  'y': 1,\n",
+       "  'g': 1,\n",
+       "  'u': 2,\n",
+       "  's': 1,\n",
+       "  't': 2,\n",
+       "  'a': 2,\n",
+       "  'v': 1,\n",
+       "  'e': 2,\n",
+       "  'f': 1,\n",
+       "  'l': 1,\n",
+       "  'r': 1},\n",
+       " {'c': 1, 'h': 1, 'a': 1, 'p': 1, 't': 1, 'e': 1, 'r': 1, 'i': 1},\n",
+       " {'c': 1, 'h': 1, 'a': 1, 'p': 1, 't': 1, 'e': 1, 'r': 1, 'i': 2},\n",
+       " {'c': 1, 'h': 1, 'a': 1, 'p': 1, 't': 1, 'e': 1, 'r': 1, 'i': 3}]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "salammbo_en = open('../../EDAN20/programs/corpus/Salammbo/salammbo_en.txt').read().strip().lower()\n",
     "salammbo_fr = open('../../EDAN20/programs/corpus/Salammbo/salammbo.txt').read().strip().lower()\n",
@@ -181,11 +217,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 0,\n",
+       " 'b': 1,\n",
+       " 'c': 2,\n",
+       " 'd': 3,\n",
+       " 'e': 4,\n",
+       " 'f': 5,\n",
+       " 'g': 6,\n",
+       " 'h': 7,\n",
+       " 'i': 8,\n",
+       " 'j': 9,\n",
+       " 'k': 10,\n",
+       " 'l': 11,\n",
+       " 'm': 12,\n",
+       " 'n': 13,\n",
+       " 'o': 14,\n",
+       " 'p': 15,\n",
+       " 'q': 16,\n",
+       " 'r': 17,\n",
+       " 's': 18,\n",
+       " 't': 19,\n",
+       " 'u': 20,\n",
+       " 'v': 21,\n",
+       " 'w': 22,\n",
+       " 'x': 23,\n",
+       " 'y': 24,\n",
+       " 'z': 25,\n",
+       " 'à': 26,\n",
+       " 'â': 27,\n",
+       " 'æ': 28,\n",
+       " 'ç': 29,\n",
+       " 'è': 30,\n",
+       " 'é': 31,\n",
+       " 'ê': 32,\n",
+       " 'ë': 33,\n",
+       " 'î': 34,\n",
+       " 'ï': 35,\n",
+       " 'ô': 36,\n",
+       " 'ù': 37,\n",
+       " 'û': 38,\n",
+       " 'œ': 39}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.feature_extraction import DictVectorizer\n",
     "\n",
@@ -203,9 +289,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1971, 40)\n",
+      "(2015, 40)\n"
+     ]
+    }
+   ],
    "source": [
     "X_en = dict_vec.transform(counts_en)\n",
     "X_fr = dict_vec.transform(counts_fr)\n",
@@ -222,13 +317,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 2., 0., 0., 0.,\n",
+       "        0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 1., 0., 0., 0.],\n",
+       "       [2., 2., 0., 0., 2., 1., 1., 0., 0., 0., 0., 1., 0., 0., 0., 0.,\n",
+       "        0., 1., 1., 2., 2., 1., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 1., 0., 1., 0., 0., 1., 1., 0., 0., 0., 0., 0., 0., 1.,\n",
+       "        0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 1., 0., 1., 0., 0., 1., 2., 0., 0., 0., 0., 0., 0., 1.,\n",
+       "        0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [1., 0., 1., 0., 1., 0., 0., 1., 3., 0., 0., 0., 0., 0., 0., 1.,\n",
+       "        0., 1., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "X = np.vstack((X_en, X_fr))\n",
     "y = [0] * len(counts_en) + [1] * len(counts_fr)\n",
     "X[:5,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We reduce the number of parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X[:, :3]"
    ]
   },
   {
@@ -247,9 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2952, 1523, 3945, 3605, 545, 1465, 3856, 1390, 587, 1276]\n"
+     ]
+    }
+   ],
    "source": [
     "indices = list(range(X.shape[0]))\n",
     "np.random.shuffle(indices)\n",
@@ -267,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,9 +440,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.52851591, -0.1155739 ,  0.06498621],\n",
+       "       [ 0.52851591,  0.73273673,  0.37512997],\n",
+       "       [ 0.52851591, -0.39834411,  0.68527373]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
@@ -333,9 +490,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "dense_1 (Dense)              (None, 1)                 4         \n",
+      "=================================================================\n",
+      "Total params: 4\n",
+      "Trainable params: 4\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "from keras import models\n",
     "from keras import layers\n",
@@ -355,12 +536,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We fit the model"
+    "We record the updates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keras\n",
+    "from keras.callbacks import TensorBoard\n",
+    "callbacks = [\n",
+    "    keras.callbacks.TensorBoard(\n",
+    "        log_dir='tb_log_folder',\n",
+    "        histogram_freq=10,\n",
+    ") ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And we fit the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +571,8 @@
     "                    epochs=100, \n",
     "                    batch_size=32, \n",
     "                    validation_data=(X_val, y_val), \n",
-    "                    verbose=0)"
+    "                    verbose=0,\n",
+    "                    callbacks=callbacks)"
    ]
   },
   {
@@ -380,9 +584,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[ 0.48772746],\n",
+       "        [-1.3212544 ],\n",
+       "        [ 0.7881461 ]], dtype=float32), array([0.03683845], dtype=float32)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.get_weights()"
    ]
@@ -513,22 +730,6 @@
    "source": [
     "history = model.fit(X_train, y_train, epochs=20, batch_size=32, \n",
     "                    validation_data=(X_val, y_val), verbose=0)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## The Model Weights"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.get_weights()"
    ]
   },
   {
