--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -138,11 +138,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from keras import models\n",
-    "from keras.layers import Dense\n",
+    "from tensorflow.keras import models\n",
+    "from tensorflow.keras.layers import Dense\n",
     "\n",
-    "model = models.Sequential()\n",
-    "model.add(Dense(1, input_dim=1, activation='linear'))\n",
+    "model = models.Sequential([\n",
+    "    Dense(1, input_dim=1, activation='linear')])\n",
     "model.summary()"
    ]
   },
@@ -159,7 +159,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(optimizer='nadam', loss='mse', metrics=['mse'])\n"
+    "model.compile(optimizer='rmsprop', loss='mse', metrics=['mse'])"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model.fit(x, y, batch_size=1, epochs=200, verbose=1)"
+    "history = model.fit(x, y, batch_size=1, epochs=200, verbose=0)"
    ]
   },
   {
@@ -253,6 +253,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tensorflow's Gradient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensorflow can compute automatically gradients. See https://www.tensorflow.org/guide/autodiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "x = tf.Variable(1.)\n",
+    "y = tf.Variable(2.)\n",
+    "\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    f = 4 * x**2  - y + 9\n",
+    "\n",
+    "df_dx = tape.gradient(f, x)\n",
+    "df_dx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_dy = tape.gradient(f, y)\n",
+    "df_dy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use matrix as input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable(tf.random.uniform((2, 2)))\n",
+    "b = tf.Variable(tf.zeros((2,)))\n",
+    "x = tf.random.uniform((2, 1))\n",
+    "\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    y_hat = W @ x + b\n",
+    "\n",
+    "tape.gradient(y_hat, [W, b])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And add a loss in the form of a mean square error. Using the initial example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.array(\n",
+    "    [[36961],\n",
+    "     [43621],\n",
+    "     [15694],\n",
+    "     [36231],\n",
+    "     [29945],\n",
+    "     [40588],\n",
+    "     [75255],\n",
+    "     [37709],\n",
+    "     [30899],\n",
+    "     [25486],\n",
+    "     [37497],\n",
+    "     [40398],\n",
+    "     [74105],\n",
+    "     [76725],\n",
+    "     [18317]])\n",
+    "y = np.array(\n",
+    "    [2503, 2992, 1042, 2487, 2014, 2805, 5062, 2643, 2126, 1784, 2641, 2766,\n",
+    "     5047, 5312, 1215])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And a model that has not yet converged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable([[0.02]])\n",
+    "b = tf.Variable(-2.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We compute the gradient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    y_hat = X @ W + b\n",
+    "    loss = tf.reduce_mean((y_hat - y)**2)\n",
+    "tape.gradient(loss, [W, b])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And the final values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "W = tf.Variable([[0.0689096]])\n",
+    "b = tf.Variable(-1.5952214)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    y_hat = X @ W + b\n",
+    "    loss = tf.reduce_mean((y_hat - y)**2)\n",
+    "tape.gradient(loss, [W, x])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -276,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
