changing the report submission mode

--- a/labs/3.0-flowers_cnn_students.ipynb
+++ b/labs/3.0-flowers_cnn_students.ipynb
@@ -44,7 +44,7 @@
     "* Experiment different neural architectures and compare the results.\n",
     "\n",
     "Each student will have to:\n",
-    "* Run at home Chollet's notebook: `5.4-visualizing-what-convnets-learn.ipynb` (https://github.com/fchollet/deep-learning-with-python-notebooks)\n",
+    "* Run at home Chollet's notebook: `5.4-visualizing-what-convnets-learn.ipynb`. The version available here https://github.com/fchollet/deep-learning-with-python-notebooks does not work with TensorFlow 2. Use the implementation available here: https://github.com/pnugues/edan95/tree/master/labs instead.\n",
     "* Write an individual report on these experiments.\n",
     "\n",
     "While not compulsory, I highly recommend that you use Google colab and run your program on a GPU. This is something you select when you run the notebook (runtime type). You will have to create a Google account for this: https://colab.research.google.com\n",
@@ -2841,13 +2841,7 @@
    "source": [
     "You will write a short report of about two pages on your experiments:\n",
     "1. You will describe the architectures you designed and the results you obtained;\n",
-    "2. You will run Chollet's notebook 5.4 and read the article <i>Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization</i> by Selvaraju et al. From this, you will reformulate and comment the paragraph on <i>Visualizing heatmaps of class activation</i> in the notebook. You will run it on one of your images.\n",
-    "\n",
-    "To write the report, you will use Overleaf.com. The submission procedure is described here: http://cs.lth.se/edan95/lab-programming-assignments/, but send me the Overleaf link only. (PROCEDURE TO BE UPDATED)\n",
-    "<!--<p>    and you will send the link to your report\n",
-    "to the course address: edan95@cs.lth.se. Do not send the PDF, only the link. You will include\n",
-    "the assignment number in the message object.</p>-->\n",
-    "You must submit this report no later than one week after you have completed the lab."
+    "2. You will run Chollet's notebook 5.4 and read the article <i>Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization</i> by Selvaraju et al. From this, you will reformulate and comment the paragraph on <i>Visualizing heatmaps of class activation</i> in the notebook. You will run it on one of your images."
    ]
   },
   {
