--- a/labs/3.0-flowers_cnn_students.ipynb
+++ b/labs/3.0-flowers_cnn_students.ipynb
@@ -2841,7 +2841,10 @@
    "source": [
     "You will write a short report of about two pages on your experiments:\n",
     "1. You will describe the architectures you designed and the results you obtained;\n",
-    "2. You will run Chollet's notebook 5.4 and read the article <i>Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization</i> by Selvaraju et al. From this, you will reformulate and comment the paragraph on <i>Visualizing heatmaps of class activation</i> in the notebook. You will run it on one of your images."
+    "2. You will run Chollet's notebook 5.4 and read the article _Grad-CAM: Visual Explanations from Deep Networks via Gradient-based Localization_ by Selvaraju et al. From this, you will reformulate and comment the paragraph on _Visualizing heatmaps of class activation_ in the notebook. \n",
+    "3. You will run it on one of your images.\n",
+    "\n",
+    "You will submit this report through Canvas."
    ]
   },
   {
