--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -307,7 +307,7 @@
    "outputs": [],
    "source": [
     "W = tf.Variable(tf.random.uniform((2, 2)))\n",
-    "b = tf.Variable(tf.zeros((2,)))\n",
+    "b = tf.Variable(tf.zeros((2, 1)))\n",
     "x = tf.random.uniform((2, 1))\n",
     "\n",
     "with tf.GradientTape(persistent=True) as tape:\n",
