--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -310,9 +310,19 @@
     "b = tf.Variable(tf.zeros((2, 1)))\n",
     "x = tf.random.uniform((2, 1))\n",
     "\n",
+    "print('W:', W)\n",
+    "print('b:', b)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with tf.GradientTape(persistent=True) as tape:\n",
     "    y_hat = W @ x + b\n",
-    "\n",
     "tape.gradient(y_hat, [W, b])"
    ]
   },
