--- a/programs/1.1-dataset and regression.ipynb
+++ b/programs/1.1-dataset and regression.ipynb
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use matrix as input"
+    "We can apply the partial differentiation to a linear combination involving a matrix and two vectors: $\\mathbf{W} \\cdot \\mathbf{x} + \\mathbf{b}$. Let us create the matrix and the vectors"
    ]
   },
   {
@@ -316,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`GradientTape` computes the partial derivatives of $\\mathbf{W}$ with respect to $w_{ij}$ (first tensor) and of $\\mathbf{b}$ with respect to $b_i$ (second tensor)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -330,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And add a loss in the form of a mean square error. Using the initial example:"
+    "We can add a loss in the form of a mean square error. Using the initial _Salammbô_ example:"
    ]
   },
   {
@@ -364,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a model that has not yet converged"
+    "And a model that has not yet reached the minimum"
    ]
   },
   {
@@ -400,7 +407,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the final values"
+    "Now let us compute the gradient with a model that has reached the minimum."
    ]
   },
   {
@@ -409,8 +416,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "W = tf.Variable([[0.0689096]])\n",
-    "b = tf.Variable(-1.5952214)"
+    "(W, b) = model.get_weights()\n",
+    "W = tf.Variable(W)\n",
+    "b = tf.Variable(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(W)\n",
+    "b"
    ]
   },
   {
@@ -422,15 +440,8 @@
     "with tf.GradientTape(persistent=True) as tape:\n",
     "    y_hat = X @ W + b\n",
     "    loss = tf.reduce_mean((y_hat - y)**2)\n",
-    "tape.gradient(loss, [W, x])"
+    "tape.gradient(loss, [W, b])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
