--- a/programs/1.3-logistic regression.ipynb
+++ b/programs/1.3-logistic regression.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "probs_raw = model.predict(X)\n",
     "probs = [log(p) * y + log(1 - p) * (1 - y) for p, y in zip(probs_raw, y)]\n",
-    "sum(probs)/X.shape[0]"
+    "-sum(probs)/X.shape[0]"
    ]
   },
   {
