--- a/programs/1.4-multiclass.ipynb
+++ b/programs/1.4-multiclass.ipynb
@@ -255,7 +255,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With Keras, the $y$ vector needs to have a one-hot encoding."
+    "With Keras, the $y$ vector is one-hot encoded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[:5]"
    ]
   },
   {
@@ -265,9 +274,8 @@
    "outputs": [],
    "source": [
     "from keras.utils import to_categorical\n",
-    "y_cat = to_categorical(y)\n",
-    "print('y:', y[:10])\n",
-    "y_cat[:10]"
+    "Y_cat = to_categorical(y)\n",
+    "Y_cat[:5]"
    ]
   },
   {
@@ -283,17 +291,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = X[:120]\n",
-    "y_train_cat = y_cat[:120]\n",
-    "x_val = X[120:]\n",
-    "y_val_cat = y_cat[120:]\n",
-    "y_val = y[120:]\n",
+    "X_train = X[:120]\n",
+    "Y_train_cat = Y_cat[:120]\n",
     "\n",
-    "history = model.fit(x_train, y_train_cat, \n",
+    "X_val = X[120:]\n",
+    "y_val = y[120:]\n",
+    "Y_val_cat = Y_cat[120:]\n",
+    "\n",
+    "history = model.fit(X_train, Y_train_cat, \n",
     "                    epochs=80, batch_size=1, \n",
-    "                    validation_data=(x_val, y_val_cat),\n",
+    "                    validation_data=(X_val, Y_val_cat),\n",
     "                    verbose=0)\n",
-    "model.evaluate(x_val, y_val_cat)"
+    "model.evaluate(X_val, Y_val_cat)"
    ]
   },
   {
@@ -376,7 +385,7 @@
    "outputs": [],
    "source": [
     "print('The original categories:\\n', y[121:126])\n",
-    "print('The encoded categories:\\n', y_cat[121:126])\n",
+    "print('The encoded categories:\\n', Y_cat[121:126])\n",
     "print('The predicted probabilities:\\n', model.predict(X[121:126]))\n",
     "print('The predicted classes:\\n', list(map(np.argmax, model.predict(X[121:126]))))"
    ]
@@ -402,8 +411,8 @@
    "outputs": [],
    "source": [
     "from math import log\n",
-    "x_val_prob = model.predict(x_val)\n",
-    "loss = -sum([log(x_val_prob[i, y_val[i]]) \n",
+    "X_val_prob = model.predict(X_val)\n",
+    "loss = -sum([log(X_val_prob[i, y_val[i]]) \n",
     "             for i in range(len(y_val))])/len(y_val)\n",
     "loss"
    ]
@@ -450,9 +459,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train = X[:120]\n",
+    "X_train = X[:120]\n",
     "y_train= y[:120]\n",
-    "x_val = X[120:]\n",
+    "X_val = X[120:]\n",
     "y_val = y[120:]\n",
     "y_val[:10]"
    ]
@@ -470,11 +479,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "history = model2.fit(x_train, y_train, \n",
+    "history = model2.fit(X_train, y_train, \n",
     "                     epochs=80, batch_size=1, \n",
-    "                     validation_data=(x_val, y_val),\n",
+    "                     validation_data=(X_val, y_val),\n",
     "                     verbose=0)\n",
-    "model2.evaluate(x_val, y_val)"
+    "model2.evaluate(X_val, y_val)"
    ]
   },
   {
