program updates for 2020

--- a/programs/5.1-functional.ipynb
+++ b/programs/5.1-functional.ipynb
@@ -24,10 +24,10 @@
    "source": [
     "from keras.models import Sequential, Model\n",
     "from keras.layers import Dense\n",
-    "smodel = Sequential()\n",
-    "smodel.add(Dense(32, activation='relu', input_shape=(64,)))\n",
-    "smodel.add(Dense(32, activation='relu'))\n",
-    "smodel.add(Dense(10, activation='softmax'))\n",
+    "smodel = Sequential([\n",
+    "    Dense(32, activation='relu', input_shape=(64,)),\n",
+    "    Dense(32, activation='relu'),\n",
+    "    Dense(10, activation='softmax')])\n",
     "smodel.summary()"
    ]
   },
@@ -124,15 +124,9 @@
    "outputs": [],
    "source": [
     "for layer in fmodel.layers:\n",
+    "    print(layer.name)\n",
     "    print(layer.get_weights())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -151,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
