--- a/programs/5.2-monoinput.ipynb
+++ b/programs/5.2-monoinput.ipynb
@@ -287,8 +287,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_words_idx = pad_sequences(X_words_idx)\n",
-    "Y_ner_idx = pad_sequences(Y_ner_idx)"
+    "X_words_idx = pad_sequences(X_words_idx, padding='post')\n",
+    "Y_ner_idx = pad_sequences(Y_ner_idx, padding='post')"
    ]
   },
   {
@@ -342,12 +342,12 @@
    "source": [
     "text_vocabulary_size = len(word_set) + 2\n",
     "\n",
-    "model = Sequential()\n",
-    "model.add(Embedding(text_vocabulary_size,\n",
+    "model = Sequential([\n",
+    "    Embedding(text_vocabulary_size,\n",
     "                    64,\n",
-    "                    mask_zero=True))\n",
-    "model.add(LSTM(32, return_sequences=True))\n",
-    "model.add(Dense(len(ner_set) + 2, activation='softmax'))"
+    "                    mask_zero=True),\n",
+    "    LSTM(32, return_sequences=True),\n",
+    "    Dense(len(ner_set) + 2, activation='softmax')])"
    ]
   },
   {
@@ -409,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
