--- a/programs/5.3-multiinput.ipynb
+++ b/programs/5.3-multiinput.ipynb
@@ -313,9 +313,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_pos_idx = pad_sequences(X_pos_idx)\n",
-    "X_words_idx = pad_sequences(X_words_idx)\n",
-    "Y_ner_idx = pad_sequences(Y_ner_idx)"
+    "X_pos_idx = pad_sequences(X_pos_idx, padding='post')\n",
+    "X_words_idx = pad_sequences(X_words_idx, padding='post')\n",
+    "Y_ner_idx = pad_sequences(Y_ner_idx, padding='post')"
    ]
   },
   {
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
